--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
       const response = await fetch("https://script.google.com/macros/s/AKfycbzjExykEP2_cRVLpAReJ7RCvF2dIDWnipWc5Nm8dSkN71fwIf2jCXGEY-GzD4kN2ACK/exec", {
         method: "POST",
+        mode: "no-cors",
         body: JSON.stringify(data),
         headers: {
           "Content-Type": "application/json"
