--- a/index.html
+++ b/index.html
@@ -1,82 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Formulario de Contacto</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #f2f2f2, #dfe6e9);
-      color: #2d3436;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 40px 20px;
-    }
-
-    .card {
-      background-color: white;
-      border-radius: 24px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-      padding: 40px;
-      max-width: 800px;
-      width: 100%;
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-      color: #0984e3;
-    }
-
-    iframe {
-      border: none;
-      width: 100%;
-      height: 800px;
-      border-radius: 12px;
-    }
-
-    @media (max-width: 768px) {
-      .card {
-        padding: 20px;
-      }
-
-      iframe {
-        height: 600px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Formulario de Contacto</h1>
-    <iframe 
-      src="https://forms.gle/QFDJbY3w8AoWV9bc8"
-      loading="lazy"
-      allowfullscreen>
-      Cargando…
-    </iframe>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; URL='https://forms.gle/8MeofFWs2qnagAWF8'" />
+    <title>Redirigiendo...</title>
+  </head>
+  <body>
+    <p>Redirigiendo al formulario...</p>
+  </body>
 </html>
